Added swagger documentation for API auth requests.
